--- a/static/sass/developer-include-topbar.scss
+++ b/static/sass/developer-include-topbar.scss
@@ -17,6 +17,7 @@
 
         .logo {
             margin-top: -4px !important;
+            padding: 0.3rem 1.125rem;
 
             svg {
                 height: 30% !important;
